add title and image header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="icon" href="https://image.flaticon.com/icons/png/512/45/45896.png">
 </head>
 <body>
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="image/pexels-bill-emrich-230794-0.jpg" alt="ruota panoramica Londra">
+        <img src="image/pexels-bill-emrich-230794-1.jpg" alt="vista panoramica">
+        <img src="image/pexels-bill-emrich-230794-2.jpg" alt="vista panoramica">
+    </header>
     
 </body>
 </html>
