add table about travel cost

--- a/index.html
+++ b/index.html
@@ -17,6 +17,50 @@
         <img src="image/pexels-bill-emrich-230794-1.jpg" alt="vista panoramica">
         <img src="image/pexels-bill-emrich-230794-2.jpg" alt="vista panoramica">
     </header>
+    <main id=Viaggio>
+        <!-- costi del viaggio -->
+        <article class=spese>
+            <h2>Le mie Spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <td><strong>Numero</strong></td>
+                        <td><strong>Descrizione</strong></td>
+                        <td><strong>Costo</strong></td>
+                    </tr> 
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr> 
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Totale</td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+
+
+                
+            </table>
+
+        </article>
+
+    </main>
+
     
 </body>
 </html>
