--- a/index.html
+++ b/index.html
@@ -52,11 +52,17 @@
                         <td>360€</td>
                     </tr>
                 </tfoot>
-
-
-                
             </table>
-
+        </article>
+        <!--Secondo articolo ul "cose da fare"-->
+        <article>
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &#10007;</li>
+                <li>Visitare Greenwich &#128504;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#128504;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
+            </ul>
         </article>
 
     </main>
