--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <img src="image/pexels-bill-emrich-230794-0.jpg" alt="ruota panoramica Londra">
         <img src="image/pexels-bill-emrich-230794-1.jpg" alt="vista panoramica">
         <img src="image/pexels-bill-emrich-230794-2.jpg" alt="vista panoramica">
+        <hr>
     </header>
     <main id=Viaggio>
         <!-- costi del viaggio -->
@@ -53,6 +54,7 @@
                     </tr>
                 </tfoot>
             </table>
+            <hr>
         </article>
         <!--Secondo articolo ul "cose da fare"-->
         <article>
@@ -63,6 +65,37 @@
                 <li>Ascoltare un artista di strada a Covent Garden &#128504;</li>
                 <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
             </ul>
+            <hr>
+        </article>
+        <!--Terzo articolo ol con ul interne "Info"-->
+        <article>
+            <h3>Info Utili</h3>
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong>- Emergenza</li>
+                        <li><strong>101</strong>- Numero Polizia</li>
+                        <li><strong>111</strong>- Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li><strong>Nome hotel</strong>Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel</strong>Westmister,London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li><strong>Volo di Andata</strong>YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno</strong>YI236X, ore 18.30 da London Heathrow</li>
+                        
+                    </ul>
+                </li>
+            </ol>
+            <hr>
         </article>
 
     </main>
