--- a/index.html
+++ b/index.html
@@ -71,26 +71,23 @@
         <article class="Info">
             <h3>Info Utili</h3>
             <ol>
-                <li>
-                    Numeri utili di emergenza
+                <li>Numeri utili di emergenza
                     <ul>
                         <li><strong>999</strong>- Emergenza</li>
                         <li><strong>101</strong>- Numero Polizia</li>
                         <li><strong>111</strong>- Numero assistenza medica</li>
                     </ul>
                 </li>
-                <li>
-                    Numeri utili di emergenza
+                <li>Hotel
                     <ul>
-                        <li><strong>Nome hotel</strong>Buckingham Palace</li>
-                        <li><strong>Indirizzo hotel</strong>Westmister,London SW1A 1AA, Regno Unito</li>
+                        <li><strong>Nome hotel: </strong>Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel: </strong>Westmister,London SW1A 1AA, Regno Unito</li>
                     </ul>
                 </li>
-                <li>
-                    Numeri utili di emergenza
+                <li>Aereo
                     <ul>
-                        <li><strong>Volo di Andata</strong>YI234X, ore 9.30 da Milano Malpensa</li>
-                        <li><strong>Volo di Ritorno</strong>YI236X, ore 18.30 da London Heathrow</li>
+                        <li><strong>Volo di Andata: </strong>YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno: </strong>YI236X, ore 18.30 da London Heathrow</li>
                         
                     </ul>
                 </li>
